# cpp20_beyond_learning

./: CMakeLists.txt  README.md
src/Creational/: CMakeLists.txt  builder.cpp  factory.cpp  patterns.cpp
src/Creational/builder/: builder.hpp
src/Creational/factory/: factory.hpp
src/cpp_puzzles_1/: CMakeLists.txt  puzzle.cpp
src/cpp_puzzles_1/printing/: printing.cpp  printing.hpp
